a01_Terraform/a01_AWS_Ifrastructure/a01_modules/a04_jenkins_worker_node_maven/main.tf
data "aws_key_pair" "my_key" {
  key_name = "terraform_dwp"
}
# data "aws_ami" "my_ami" {
#   most_recent = true
#   owners      = ["137112412989"]

#   filter {
#     name   = "name"
#     values = ["amzn2-ami-kernel-*-x86_64-gp2"]
#   }
# }

resource "aws_instance" "maven_ec2" {
  ami             = var.ami
  instance_type   = var.instance_type
  key_name        = data.aws_key_pair.my_key.key_name
  vpc_security_group_ids = [aws_security_group.maven_sg.id]
  subnet_id       = var.dwp_pub_sub_02_id
  associate_public_ip_address = true
  tags = {
    Name          = "${var.name}-ec2"
    Project       = var.project
    Folder        = var.folder
    ManagedBy     = var.managedby
    Owner         = var.owner
    Administrator = var.administrator
  }
  depends_on      = [aws_security_group.maven_sg]
}
